chore: multiple cleanups

--- a/docs/guides/provider/Provider.stories.mdx
+++ b/docs/guides/provider/Provider.stories.mdx
@@ -24,7 +24,7 @@ const MyApp = ({ children }) => {
 <ArgsTable of={HvProvider} />
 
 The `HvProvider` enables you to define your themes through the `themes` property which accepts a list of themes. Then, the `theme` and `colorMode` properties
-are used to specify the active theme and color mode. For more information, please read the [theming](/docs/guides-theming-theming--main#theming) documentation.
+are used to specify the active theme and color mode. For more information, please read the [**theming**](/docs/guides-theming--main#theming) documentation.
 
 If several `HvProvider`'s are used, you'll need to create different root elements, set the `rootElementId` property for each one of the providers, and scope the
 theme styles to the root element with the `cssTheme` property.
