--- a/docs/overview/community/ReleaseVersioning.stories.mdx
+++ b/docs/overview/community/ReleaseVersioning.stories.mdx
@@ -16,7 +16,7 @@ We trigger a release build of all our active branches every day. This means that
 
 When working on a major version, preview builds (alpha, beta or rc) should be available whenever we feel we have a good subset of things for teams to try out.
 
-Every release changelogs will be available in the [github releases section](https://github.com/lumada-design/hv-uikit-react/releases) and our [documentation](https://lumada-design.github.io) updated.
+Every release changelogs will be available in the [github releases section](https://github.com/lumada-design/hv-uikit-react/releases) and our documentation updated.
 
 ## Versioning
 
