--- a/docs/overview/introduction/Introduction.stories.mdx
+++ b/docs/overview/introduction/Introduction.stories.mdx
@@ -65,4 +65,4 @@ Even though we're focused on developing a component library that is compliant wi
 
 ## License
 
-This project is licensed under the terms of the [Apache 2.0 license](/LICENSE.md).
+This project is licensed under the terms of the [Apache 2.0 license](https://github.com/lumada-design/hv-uikit-react/blob/master/LICENSE).
