--- a/docs/overview/status/ProjectStatus.stories.mdx
+++ b/docs/overview/status/ProjectStatus.stories.mdx
@@ -8,22 +8,30 @@ import data from "./data.json";
 Here you can stay up-to-date on the status of project and its development. This can help users of the UI kit understand what features they can currently take advantage of, as well as what they can expect to see in future updates.
 
 - [Versions](#versions)
+- [Supported browsers](#supported-browsers)
 - [Packages](#packages)
 - [Components](#components)
-- [Supported browsers](#supported-browsers)
 
 ## Versions <a id="versions" />
 
 Here you can find all supported UI Kit versions and their corresponding Design System and core dependencies versions.  
 The most recent version is recommended for use in production.
 
-| Release date   | UI Kit version                                                       | Design System version                                                                                     | React version | MUI version                | Emotion version |
-| -------------- | -------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- | ------------- | -------------------------- | --------------- |
-| March 2023     | [UI Kit v5.x](https://lumada-design.github.io/uikit/master)          | [Design System 5.x](https://designsystem.hitachivantara.com/)                                             | 17, 18        | [5.x](https://mui.com/)    | 11.x            |
-| September 2022 | [UI Kit v4.x](https://lumada-design.github.io/uikit/v4)              | [Design System 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [5.x](https://mui.com/)    | 11.x            |
-| October 2020   | [UI Kit v3.x](https://lumada-design.github.io/uikit/v3-old-registry) | [Design System 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [4.x](https://v4.mui.com/) | -               |
+| Release date   | UI Kit version                                              | Design System version                                                                                     | React version | MUI version                | Emotion version |
+| -------------- | ----------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- | ------------- | -------------------------- | --------------- |
+| March 2023     | [UI Kit v5.x](https://lumada-design.github.io/uikit/master) | [Design System 5.x](https://designsystem.hitachivantara.com/)                                             | 17, 18        | [5.x](https://mui.com/)    | 11.x            |
+| September 2022 | [UI Kit v4.x](https://lumada-design.github.io/uikit/v4.x)   | [Design System 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [5.x](https://mui.com/)    | 11.x            |
+| October 2020   | [UI Kit v3.x](https://lumada-design.github.io/uikit/v3.x)   | [Design System 3.x](https://hitachivantara.sharepoint.com/sites/DesignSystem/Pattern%20Library/Home.aspx) | 16, 17        | [4.x](https://v4.mui.com/) | -               |
 
 To know more about the practices that are followed for release and versioning, please read our [**release and versioning**](/docs/overview-community-releases--page) documentation.
+
+## Supported browsers <a id="supported-browsers" />
+
+NEXT UI Kit supports the latest, stable releases of all major browsers and platforms.
+
+| Edge  | Firefox | Chrome | Safari (macOS) |     IE 11     |
+| :---: | :-----: | :----: | :------------: | :-----------: |
+| >= 91 |  >= 78  | >= 90  |     >= 14      | Not supported |
 
 ## Packages <a id="packages" />
 
@@ -74,11 +82,3 @@ The following table shows the current status of each component and its features,
     ))}
   </tbody>
 </table>
-
-## Supported browsers <a id="supported-browsers" />
-
-NEXT UI Kit supports the latest, stable releases of all major browsers and platforms.
-
-| Edge  | Firefox | Chrome | Safari (macOS) |     IE 11     |
-| :---: | :-----: | :----: | :------------: | :-----------: |
-| >= 91 |  >= 78  | >= 90  |     >= 14      | Not supported |
