chore: add missing mapping to Colors migration table

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -468,6 +468,7 @@ Colors names have changed in v5.x from previous versions. The table below maps t
 | Accent      | acce2s | primary_20   |
 | Accent      | acce3  | brand        |
 | Accent      | acce4  | secondary_80 |
+| Atmosphere  | atmo5  | secondary_60 |
 | Semantic    | sema1  | positive     |
 | Semantic    | sema1m | positive_80  |
 | Semantic    | sema1h | positive_120 |
