docs(icons): change button behavior, remove duplicate code

--- a/docs/foundation/Icons/Icons.stories.mdx
+++ b/docs/foundation/Icons/Icons.stories.mdx
@@ -1,7 +1,6 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs";
 import IconLibrary from "./Library";
 import { ActualSize, FemaleRunning } from "@hitachivantara/uikit-react-icons";
-import IconCategories from "./IconCategories";
 
 <Meta title="Foundation/Icons" />
 
@@ -27,7 +26,7 @@ This final result will be:
 
 <Preview>
   <Story name="Icons">
-    <IconLibrary isIcons search sizeDropdown />
+    <IconLibrary isIcons />
   </Story>
 </Preview>
 
@@ -53,14 +52,6 @@ This final result will be:
 
 <Preview>
   <Story name="Pictograms">
-    <IconLibrary isIcons={false} search sizeDropdown />
-  </Story>
-</Preview>
-
-For a easier search, the icons can be divided in the following categories:
-
-<Preview>
-  <Story name="Icon Categories">
-    <IconCategories />
+    <IconLibrary isIcons={false} />
   </Story>
 </Preview>
