fix: missing shad1 color added for DS3
fix: missing shad1 color added for DS3

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -112,34 +112,34 @@ This will be more thoroughly discussed in the [next section](#update-utilities).
 
 Since the theme has a different structure from the one provided on v4.x, find below a mapping of the `theme` object where changes were introduced.
 
-| MUI theme object                                                                                                                                                                                                                                                                                     | UI Kit theme object from `core` package | UI Kit theme object from `useTheme` hook        |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- | ----------------------------------------------- |
-| `theme.hv.palette.accent.*` `theme.hv.palette.atmosphere.*` `theme.hv.palette.base.*` `theme.hv.palette.semantic.*` `theme.hv.palette.support.*` `theme.hv.viz.palette.categorical.*` `theme.hv.viz.palette.sequential.*` `theme.hv.viz.palette.polarized.*` `theme.hv.viz.palette.undefinedState.*` | `theme.colors.*`                        | `activeTheme.colors.modes[selectedMode].*`      |
-| `theme.hv.shadows[0]`                                                                                                                                                                                                                                                                                | -                                       | -                                               |
-| `theme.hv.shadows[1]`                                                                                                                                                                                                                                                                                | `theme.colors.shadow`                   | `activeTheme.colors.modes[selectedMode].shadow` |
-| `theme.hv.spacing.*`                                                                                                                                                                                                                                                                                 | `theme.space.*`                         | `activeTheme.space.*`                           |
-| `theme.hv.typography.fontFamily`                                                                                                                                                                                                                                                                     | `theme.fontFamily`                      | `activeTheme.fontFamily`                        |
-| `theme.hv.typography["3xlTitle"]`                                                                                                                                                                                                                                                                    | `theme.typography.display`              | `activeTheme.typography.display`                |
-| `theme.hv.typography.xlTitle`                                                                                                                                                                                                                                                                        | `theme.typography.title1`               | `activeTheme.typography.title1`                 |
-| `theme.hv.typography.mTitle`                                                                                                                                                                                                                                                                         | `theme.typography.title2`               | `activeTheme.typography.title2`                 |
-| `theme.hv.typography.xsTitle`                                                                                                                                                                                                                                                                        | `theme.typography.title3`               | `activeTheme.typography.title3`                 |
-| `theme.hv.typography.highlightText`                                                                                                                                                                                                                                                                  | `theme.typography.label`                | `activeTheme.typography.label`                  |
-| `theme.hv.typography.normalText`                                                                                                                                                                                                                                                                     | `theme.typography.body`                 | `activeTheme.typography.body`                   |
-| `theme.hv.typography.vizText`                                                                                                                                                                                                                                                                        | `theme.typography.caption1`             | `activeTheme.typography.caption1`               |
-| `theme.hv.typography.*`                                                                                                                                                                                                                                                                              | `theme.typography.*`                    | `activeTheme.typography.*`                      |
-| `theme.zIndex.appBar`                                                                                                                                                                                                                                                                                | `theme.zIndices.banner`                 | `activeTheme.zIndices.banner`                   |
-| `theme.zIndex.mobileStepper`                                                                                                                                                                                                                                                                         | `theme.zIndices.sticky`                 | `activeTheme.zIndices.sticky`                   |
-| `theme.zIndex.drawer`                                                                                                                                                                                                                                                                                | `theme.zIndices.overlay`                | `activeTheme.zIndices.overlay`                  |
-| `theme.zIndex.snackbar`                                                                                                                                                                                                                                                                              | `theme.zIndices.dropdown`               | `activeTheme.zIndices.dropdown`                 |
-| `theme.zIndex.tooltip`                                                                                                                                                                                                                                                                               | `theme.zIndices.popover`                | `activeTheme.zIndices.popover`                  |
-| `theme.zIndex.speedDial`                                                                                                                                                                                                                                                                             | `theme.zIndices.fab`                    | `activeTheme.zIndices.fab`                      |
-| `theme.zIndex.*`                                                                                                                                                                                                                                                                                     | `theme.zIndices.*`                      | `activeTheme.zIndices.*`                        |
-| `theme.hvSpacing()`                                                                                                                                                                                                                                                                                  | `theme.spacing()`                       | -                                               |
-| `theme.breakpoints.up()`                                                                                                                                                                                                                                                                             | -                                       | -                                               |
-| `theme.breakpoints.down()`                                                                                                                                                                                                                                                                           | -                                       | -                                               |
-| `theme.breakpoints.between()`                                                                                                                                                                                                                                                                        | -                                       | -                                               |
-| `theme.breakpoints.only()`                                                                                                                                                                                                                                                                           | -                                       | -                                               |
-| `theme.breakpoints.not()`                                                                                                                                                                                                                                                                            | -                                       | -                                               |
+| MUI theme object                                                                                                                                                                                                                                                                                                                 | UI Kit theme object from `core` package | UI Kit theme object from `useTheme` hook        |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- | ----------------------------------------------- |
+| `theme.hv.palette.accent.*` `theme.hv.palette.atmosphere.*` `theme.hv.palette.base.*` `theme.hv.palette.semantic.*` `theme.hv.palette.support.*` `theme.hv.palette.shadow.*` `theme.hv.viz.palette.categorical.*` `theme.hv.viz.palette.sequential.*` `theme.hv.viz.palette.polarized.*` `theme.hv.viz.palette.undefinedState.*` | `theme.colors.*`                        | `activeTheme.colors.modes[selectedMode].*`      |
+| `theme.hv.shadows[0]`                                                                                                                                                                                                                                                                                                            | -                                       | -                                               |
+| `theme.hv.shadows[1]`                                                                                                                                                                                                                                                                                                            | `theme.colors.shadow`                   | `activeTheme.colors.modes[selectedMode].shadow` |
+| `theme.hv.spacing.*`                                                                                                                                                                                                                                                                                                             | `theme.space.*`                         | `activeTheme.space.*`                           |
+| `theme.hv.typography.fontFamily`                                                                                                                                                                                                                                                                                                 | `theme.fontFamily`                      | `activeTheme.fontFamily`                        |
+| `theme.hv.typography["3xlTitle"]`                                                                                                                                                                                                                                                                                                | `theme.typography.display`              | `activeTheme.typography.display`                |
+| `theme.hv.typography.xlTitle`                                                                                                                                                                                                                                                                                                    | `theme.typography.title1`               | `activeTheme.typography.title1`                 |
+| `theme.hv.typography.mTitle`                                                                                                                                                                                                                                                                                                     | `theme.typography.title2`               | `activeTheme.typography.title2`                 |
+| `theme.hv.typography.xsTitle`                                                                                                                                                                                                                                                                                                    | `theme.typography.title3`               | `activeTheme.typography.title3`                 |
+| `theme.hv.typography.highlightText`                                                                                                                                                                                                                                                                                              | `theme.typography.label`                | `activeTheme.typography.label`                  |
+| `theme.hv.typography.normalText`                                                                                                                                                                                                                                                                                                 | `theme.typography.body`                 | `activeTheme.typography.body`                   |
+| `theme.hv.typography.vizText`                                                                                                                                                                                                                                                                                                    | `theme.typography.caption1`             | `activeTheme.typography.caption1`               |
+| `theme.hv.typography.*`                                                                                                                                                                                                                                                                                                          | `theme.typography.*`                    | `activeTheme.typography.*`                      |
+| `theme.zIndex.appBar`                                                                                                                                                                                                                                                                                                            | `theme.zIndices.banner`                 | `activeTheme.zIndices.banner`                   |
+| `theme.zIndex.mobileStepper`                                                                                                                                                                                                                                                                                                     | `theme.zIndices.sticky`                 | `activeTheme.zIndices.sticky`                   |
+| `theme.zIndex.drawer`                                                                                                                                                                                                                                                                                                            | `theme.zIndices.overlay`                | `activeTheme.zIndices.overlay`                  |
+| `theme.zIndex.snackbar`                                                                                                                                                                                                                                                                                                          | `theme.zIndices.dropdown`               | `activeTheme.zIndices.dropdown`                 |
+| `theme.zIndex.tooltip`                                                                                                                                                                                                                                                                                                           | `theme.zIndices.popover`                | `activeTheme.zIndices.popover`                  |
+| `theme.zIndex.speedDial`                                                                                                                                                                                                                                                                                                         | `theme.zIndices.fab`                    | `activeTheme.zIndices.fab`                      |
+| `theme.zIndex.*`                                                                                                                                                                                                                                                                                                                 | `theme.zIndices.*`                      | `activeTheme.zIndices.*`                        |
+| `theme.hvSpacing()`                                                                                                                                                                                                                                                                                                              | `theme.spacing()`                       | -                                               |
+| `theme.breakpoints.up()`                                                                                                                                                                                                                                                                                                         | -                                       | -                                               |
+| `theme.breakpoints.down()`                                                                                                                                                                                                                                                                                                       | -                                       | -                                               |
+| `theme.breakpoints.between()`                                                                                                                                                                                                                                                                                                    | -                                       | -                                               |
+| `theme.breakpoints.only()`                                                                                                                                                                                                                                                                                                       | -                                       | -                                               |
+| `theme.breakpoints.not()`                                                                                                                                                                                                                                                                                                        | -                                       | -                                               |
 
 #### Typography
 
