docs: updates for filter group and step navigation

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -52,15 +52,20 @@ application at the moment since their development are still in progress. Over ti
 
 - `@hitachivantara/uikit-react-viz`
 - `@hitachivantara/uikit-react-code-editor`
-- `@hitachivantara/uikit-react-lab`
+- The following components from `@hitachivantara/uikit-react-lab` are missing:
+  - Color Picker
+  - Drawer
+  - Image carrousel
+  - Inline editor
+  - Navigation anchors
+  - Notification panel
+  - Wizard
 - The following components from `@hitachivantara/uikit-react-core` are missing:
-  - `HvDatePicker`
-  - `HvTimePicker`
-  - `HvScrollToHorizontal`
-  - `HvScrollToVertical`
-  - `HvFilterGroup`
-  - User preferences components: `HvUserPreferences`, `HvUserPreferencesActions`, `HvUserPreferencesAction`, `HvUserPreferencesOptions`,
-    `HvUserPreferencesOption`, `HvUserPreferencesOptionsGroup`, and `HvUserPreferencesOptionsGroupLabel`
+  - Date picker
+  - Time picker
+  - Scroll to horizontal
+  - Scroll to vertical
+  - User preferences
 
 The `@hitachivantara/uikit-react-compat` and `@hitachivantara/uikit-common-themes` packages are **deprecated** in v5.
 
@@ -456,6 +461,7 @@ In v5.x, some components and types were renamed as detailed in the table below.
 | Type              | HvUiKitThemeNames      | HvThemeColorMode           |
 | Type              | KnobProperty           | HvKnobProperty             |
 | Type              | MarkProperty           | HvMarkProperty             |
+| Type              | FilterValue            | HvFilterGroupValue         |
 
 ## Colors <a id="colors" />
 
