--- a/docs/overview/status/ProjectStatus.stories.mdx
+++ b/docs/overview/status/ProjectStatus.stories.mdx
@@ -45,7 +45,7 @@ Bear in mind that v4.x and v5.x packages can't be used simultaneously due to the
 | @hitachivantara/uikit-react-icons       |      ✅       |
 | @hitachivantara/uikit-react-shared      |      ✅       |
 | @hitachivantara/uikit-styles            |      ✅       |
-| @hitachivantara/uikit-react-lab         | `in progress` |
+| @hitachivantara/uikit-react-lab         |      ✅       |
 | @hitachivantara/uikit-react-viz         | `in progress` |
 | @hitachivantara/uikit-react-code-editor | `in progress` |
 | @hitachivantara/uikit-react-compat      | `deprecated`  |
